# cctray-proxy

./: .gitignore  Cargo.toml  README.md
config/: example-config.json
fixture/: bitbucket_pipeline_custom.json  bitbucket_pipeline_main.json  output.xml  pipelines.json
src/: config.rs  json.rs  main.rs  pipeline.rs  pipeline_data_provider.rs  pipeline_fetcher.rs  pipeline_loader.rs  pipeline_parser.rs  proxy.rs
src/pipeline/: fetcher.rs  model.rs  parser.rs  test_data_provider.rs
