[package]
name = "cctray-proxy"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
reqwest = "0.12.9"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
axum = "0.7.7"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"
chrono = "0.4.38"
axum-response-cache = "0.1.1"
futures = "0.3.31"